force-app/main/default/objects/Async_Apex_Logger__c/Async_Apex_Logger__c.object-meta.xml
<CustomObject>
    <description>to store the Async apex details</description>
    <label>Async Apex Logger</label>
    <nameField>
        <displayFormat>AAL-{000000}</displayFormat>
        <label>Async Apex Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Apex Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>