force-app/main/default/objects/Async_Apex_Logger__c/fields/Opportunity_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Field_Values__c</fullName>
    <description>GTMS-20016: created as part of OVA logging functionality.</description>
    <label>Opportunity Field Values For OVA</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>