force-app/main/default/objects/Async_Apex_Logger__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>To store opportunity id for OVA process</description>
    <label>Opportunity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>