force-app/main/default/objects/Async_Apex_Logger__c/fields/Opportunity_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Tracking__c</fullName>
    <label>Opportunity Tracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>