force-app/main/default/objects/Async_Apex_Logger__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>to store the async apex status</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>